<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>talker</name>
  <version>0.0.0</version>
  <description>Examples talker on rmw_zenoh_pico</description>
  <maintainer email="v-yamazaki8668@esol.co.jp">Katsumi Yamazaki</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclc</depend>
  <depend>rclc_parameter</depend>
  <depend>rcl_interfaces</depend>
  <depend>std_msgs</depend>

  <depend>rmw_zenoh_pico</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
